nicer-looking strings for `shell` and  `description`
Besides tweaking whitespace and changing the format of the description string,
this also uses semantic linefeeds for the description.

This will change were the newlines show in jenkins, but it makes the yaml easier to read. And that's important.

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -2,19 +2,22 @@
     block-downstream: false
     block-upstream: false
     builders:
-    - shell: 'PROJECT_NAME=${JOB_NAME} DEPLOY_ECS=false ~/bin/rails_deploy.sh
-
-        '
+    - shell: 'PROJECT_NAME=${JOB_NAME} DEPLOY_ECS=false ~/bin/rails_deploy.sh'
     concurrent: false
-    description: "Builds a simplistic rails app, which only serves to prove out the\
-      \ ci & deployment infrastructure.\r\n\r\nBuilds on the 'staging' branch automatically\
-      \ trigger a deployment of that image to the staging environment. \r\nFrom 7am\
-      \ to 1pm on weekdays, builds on the 'master' branch automatically trigger a\
-      \ deployment of that image to the production environment.\r\n\r\nHistoric builds\
-      \ can be manually deployed to either staging or production, by running the 'Deploy\
-      \ to Production' or the 'Deploy to Staging' build promotions. (This won't work\
-      \ for builds that were not pushed to dockerhub -- currently, only staging/master\
-      \ images get pushed to dockerhub)."
+    description: |
+      Builds a simplistic rails app,
+      which only serves to prove out the ci & deployment infrastructure.
+
+      Builds on the 'staging' branch automatically trigger a deployment
+      of that image to the staging environment.
+
+      From 7am to 1pm on weekdays, builds on the 'master' branch automatically trigger a
+      deployment of that image to the production environment.
+
+      Historic builds can be manually deployed to either staging or production,
+      by running the 'Deploy to Production' or the 'Deploy to Staging' build promotions.
+      (This won't work for builds that were not pushed to dockerhub --
+      currently, only staging/master images get pushed to dockerhub).
     disabled: false
     name: rails-infrastructure-canary
     parameters: []
