configure github trigger
(I'm removing the comments from the xml as I add to the yaml, to help keep track of what is still left to do)

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -31,7 +31,8 @@
         branches:
         - $BRANCH_SPECIFIER
         url: git@github.com:CruGlobal/rails-infrastructure-canary.git
-    triggers: []
+    triggers:
+        - github
     wrappers:
     - build-name:
         name: '${GIT_BRANCH} #${BUILD_NUMBER}'
