we don't want wipe-workspace
not sure why this is true by default in jjb (it isn't in the jenkins UI)

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -44,6 +44,7 @@
         branches:
         - $BRANCH_SPECIFIER
         url: git@github.com:CruGlobal/rails-infrastructure-canary.git
+        wipe-workspace: false
     triggers:
         - github
     wrappers:
