add disk-usage-plugin config
(This works because I added support for it in jenkins-job-builder. However, I'm not sure this property is even needed. I'll remove it, and my jjb customization, if it isn't. This was mostly to test out how hard it was to customize jjb.)

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -20,6 +20,8 @@
     properties:
     - github:
         url: https://github.com/CruGlobal/fails-infrastructure-canary/
+    - disk-usage
+
     publishers:
       - conditional-publisher:
           - condition-kind: always
