--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -24,11 +24,9 @@
 
     publishers:
       - conditional-publisher:
-          - condition-kind: always
-# TODO: jjb doesn't seem to support strings-match here (but it does in builders)
-#          - condition-kind: strings-match
-#            condition-string1: "$GIT_BRANCH"
-#            condition-string2: "origin/staging"
+          - condition-kind: strings-match
+            condition-string1: "$GIT_BRANCH"
+            condition-string2: "origin/staging"
             action:
               - trigger-parameterized-builds:
                   - project: deploy-ecs
