--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -25,7 +25,7 @@
     publishers:
       - conditional-publisher:
           - condition-kind: strings-match
-            condition-string1: "$GIT_BRANCH"
+            condition-string1: "${GIT_BRANCH}"
             condition-string2: "origin/staging"
             action:
               - trigger-parameterized-builds:
@@ -36,6 +36,30 @@
                       GIT_COMMIT=${GIT_COMMIT}
                       GIT_BRANCH=${GIT_BRANCH}
                       ENVIRONMENT=staging
+                      CLUSTER=lab
+                    condition: SUCCESS
+      - conditional-publisher:
+          - condition-kind: and
+            condition-operands:
+              - condition-kind: strings-match
+                condition-string1: "$GIT_BRANCH"
+                condition-string2: "origin/master"
+              - condition-kind: day-of-week
+                day-selector: weekday
+              - condition-kind: time
+                earliest-hour: "7"
+                earliest-min: "0"
+                latest-hour: "13"
+                latest-min: "0"
+            action:
+              - trigger-parameterized-builds:
+                  - project: deploy-ecs
+                    predefined-parameters: |
+                      IMAGE_TAG=${GIT_COMMIT}-${BUILD_NUMBER}
+                      PROJECT_NAME=${JOB_NAME}
+                      GIT_COMMIT=${GIT_COMMIT}
+                      GIT_BRANCH=${GIT_BRANCH}
+                      ENVIRONMENT=production
                       CLUSTER=lab
                     condition: SUCCESS
 
