add promotion process names
(Though the process definitions themselves will have to be added some other way. I'm still working on this.)

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -32,6 +32,10 @@
     - github:
         url: https://github.com/CruGlobal/fails-infrastructure-canary/
     - disk-usage
+    - promoted-build:
+          names:
+            - Deploy to Staging
+            - Deploy to Production
 
     publishers:
       - conditional-publisher:
