add presend-script config
This makes the xml output match what the jenkins GUI creates.
Also, we don't currently have a global presend-script set up, but this might be useful later on.

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -108,6 +108,7 @@
                     ${BUILD_URL}promotion/
 
                     $DEFAULT_CONTENT
+                  presend-script: $DEFAULT_PRESEND_SCRIPT
 
 
     scm:
