don't tag builds
jjb sets this to false by default, though the Jenkins UI sets it to true by default.
We don't really need/want tagged builds, right now.

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -119,6 +119,7 @@
         - $BRANCH_SPECIFIER
         url: git@github.com:CruGlobal/rails-infrastructure-canary.git
         wipe-workspace: false
+        skip-tag: true
     triggers:
         - github
     wrappers:
