add git 'prune' config
this keeps the branches listed in the BRANCH_SPECIFIER dropdown matching what github has, instead of growing large over time

--- a/jobs/rails-infrastructure-canary.yml
+++ b/jobs/rails-infrastructure-canary.yml
@@ -42,6 +42,7 @@
           url: git@github.com:CruGlobal/rails-infrastructure-canary.git
           wipe-workspace: false
           skip-tag: true
+          prune: true
     triggers:
       - github
 
