--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -27,13 +27,14 @@
 - project:
     name: maintenance
     description-intro: Builds, tests, & deploys the maintenance management docker image.
+    email-recipients: josh.starcher@cru.org
     jobs:
       - 'rails-template'
 
 - project:
     name: missionhub
     description-intro: Builds, tests, & deploys the MissionHub docker image.
-    email-recipients: josh.starcher@cru.org, kennethjohnbalgos@gmail.com, marvindpunongbayan@gmail.com
+    email-recipients: josh.starcher@cru.org
     jobs:
       - 'rails-template'
 
