--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -52,6 +52,13 @@
       - 'rails-template'
 
 - project:
+    name: ministry_view_api
+    description-intro: Builds, tests, & deploys the MinistryView API docker image.
+    email-recipients: brian.zoetewey@ccci.org
+    jobs:
+      - 'rails-template'
+
+- project:
     name: missionhub
     description-intro: Builds, tests, & deploys the MissionHub docker image.
     email-recipients: josh.starcher@cru.org
