--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -73,6 +73,13 @@
       - 'rails-template'
 
 - project:
+    name: pact_hr
+    description-intro: Builds, tests, & deploys the Pact HR docker image.
+    email-recipients: josh.starcher@cru.org
+    jobs:
+      - 'rails-template'
+
+- project:
     name: mpd-dashboard-api
     description-intro: Builds, tests, & deploys the mpd-dashboard-api docker image.
     email-recipients: josh.starcher@cru.org, brian.zoetewey@ccci.org, adam.meyer@cru.org
@@ -182,6 +189,13 @@
       - 'react-template'
 
 - project:
+    name: ararat
+    description-intro: Builds, tests, & deploys the Ararat docker image.
+    email-recipients: josh.starcher@cru.org, sheldon@ballistiq.com
+    jobs:
+      - 'rails-template'
+
+- project:
     name: redirector
     description-intro: Builds, tests, & deploys the redirector docker image.
     email-recipients: josh.starcher@cru.org
@@ -283,6 +297,7 @@
                       GIT_BRANCH=$GIT_BRANCH
                       ENVIRONMENT=staging
                       CLUSTER={cluster}
+                      LD_LIBRARY_PATH=/opt/oracle/instantclient_11_2
                     condition: SUCCESS
           - condition-kind: and
             condition-operands:
@@ -309,6 +324,7 @@
                       GIT_BRANCH=$GIT_BRANCH
                       ENVIRONMENT=production
                       CLUSTER={cluster}
+                      LD_LIBRARY_PATH=/opt/oracle/instantclient_11_2
                     condition: SUCCESS
           - condition-kind: and
             condition-operands:
