--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -268,6 +268,9 @@
             names:
               - Deploy to Staging
               - Deploy to Production
+      - inject:
+          properties-content: |
+            LD_LIBRARY_PATH=/opt/oracle/instantclient_11_2
     scm:
       - git:
           branches:
