--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -163,6 +163,13 @@
       - 'rails-template'
 
 - project:
+    name: staffportal_api
+    description-intro: Builds, tests, & deploys the Staff Portal docker image.
+    email-recipients: tataihono.nikora@cru.org, kewei.jiang@cru.org
+    jobs:
+      - 'rails-template'
+
+- project:
     name: summer_missions
     description-intro: Builds, tests, & deploys the Summer Missions docker image.
     email-recipients: josh.starcher@cru.org, justin.sabelko@cru.org, mark.knutsen@cru.org
